# Sheaf

./: .gitignore  .secrets.example.json  AGENTS.md  README.md  chainlit_app.py  pyproject.toml  run_server.py  sheaf_server.config  sheaf_server.config.example  zulip_bot.config.example.json
.chainlit/: config.toml
.codex/skills/: planner
.cursor/skills/: implementer  polisher  reviewer
agents/: README.md  roles.md
apps/obsidian-replica/: data.json  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  tsconfig.test.json
cli/: chat_loop.py
data/: README.md
docs/: EXECUTION_PLAN.md  SPEC.md  renderer constraints.md
docs/workflow/: README.md  issues.md  quests.md  stages.md
ios/SheafClient/: Info.plist
ios/SheafIOS/: Package.resolved  Package.swift  README.md
public/: sheaf-chainlit.css  sheaf-chainlit.js
roadmaps/file_logging/: README.md
roadmaps/obsidian replica/: 01_mobile_replica_foundations.md  02_log_replay_and_repair.md  03_rpc_stream_and_lifecycle.md  README.md
roadmaps/rewrite/: 04_models_and_requests.md  05_chat_transport_and_sync.md  06_turn_execution_and_commit.md  07_failure_recovery_and_reconnect.md  README.md
scripts/: create_workflow.py  deploy_obsidian_plugin.sh  install_obsidian_plugin.sh  reset_data.sh  show_graph.py  zulip_poll_bot.py
tests/: test_dispatcher_ollama_streaming.py  test_file_tools_visibility.py  test_filesystem_logging.py  test_replica_sync.py  test_server_model_selection.py  test_settings.py  test_simple_tool_schema.py  test_sqlite_query_tool.py  test_worker.py
(+177 files in other folders)
